# kio_sysinfo

./: Makefile  README.md  kio_sysinfo.spec
src/: CMakeLists.txt  README
src/po/: CMakeLists.txt
src/po/cs/: kio_sysinfo.po
src/po/de/: kio_sysinfo.po
src/po/el/: kio_sysinfo.po
src/po/en_GB/: kio_sysinfo.po
src/po/es/: kio_sysinfo.po
src/po/et/: kio_sysinfo.po
src/po/fr/: kio_sysinfo.po
src/po/ga/: kio_sysinfo.po
src/po/gl/: kio_sysinfo.po
src/po/km/: kio_sysinfo.po
src/po/lt/: kio_sysinfo.po
src/po/ms/: kio_sysinfo.po
src/po/nb/: kio_sysinfo.po
src/po/nds/: kio_sysinfo.po
src/po/nl/: kio_sysinfo.po
src/po/nn/: kio_sysinfo.po
src/po/pa/: kio_sysinfo.po
src/po/pt/: kio_sysinfo.po
src/po/pt_BR/: kio_sysinfo.po
src/po/ro/: kio_sysinfo.po
src/po/sv/: kio_sysinfo.po
src/po/tr/: kio_sysinfo.po
src/po/uk/: kio_sysinfo.po
src/po/zh_TW/: kio_sysinfo.po
src/src/: CMakeLists.txt  config-kiosysinfo.h.cmake  ksysinfopart.cpp  ksysinfopart.desktop  ksysinfopart.h  sysinfo.cpp  sysinfo.h
src/src/about/debian/: CMakeLists.txt  style.css
src/src/about/fedora/: style.css
src/src/about/generic/: CMakeLists.txt  my-computer.html  style.css
src/src/about/mandriva/: my-computer.html  style.css
src/src/about/shared/: CMakeLists.txt  shared.css
src/src/about/suse/: style.css
