find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)
add_subdirectory(de)
add_subdirectory(lt)
add_subdirectory(km)
add_subdirectory(el)
add_subdirectory(pt)
add_subdirectory(nds)
add_subdirectory(ms)
add_subdirectory(sv)
add_subdirectory(nl)
add_subdirectory(cs)
add_subdirectory(zh_TW)
add_subdirectory(nn)
add_subdirectory(en_GB)
add_subdirectory(tr)
add_subdirectory(pt_BR)
add_subdirectory(et)
add_subdirectory(ga)
add_subdirectory(uk)
add_subdirectory(nb)
add_subdirectory(fr)
add_subdirectory(pa)
add_subdirectory(es)
add_subdirectory(gl)
add_subdirectory(ro)
